--- a/src/hosts/Elsa.Studio.Host.Wasm/Dockerfile
+++ b/src/hosts/Elsa.Studio.Host.Wasm/Dockerfile
@@ -1,20 +1,23 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0-bookworm-slim AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 80/tcp
+EXPOSE 443/tcp
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /src
-COPY ["src/Elsa.Studio.WebAssemblyApp/Elsa.Studio.WebAssemblyApp.csproj", "src/Elsa.Studio.WebAssemblyApp/"]
-RUN dotnet restore "src/Elsa.Studio.WebAssemblyApp/Elsa.Studio.WebAssemblyApp.csproj"
-COPY . .
-WORKDIR "/src/src/Elsa.Studio.WebAssemblyApp"
-RUN dotnet build "Elsa.Studio.WebAssemblyApp.csproj" -c Release -o /app/build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# WORKDIR /src/elsa-studio/src/hosts/Elsa.Studio.Host.Wasm/
+# COPY ./elsa-studio/src/hosts/Elsa.Studio.Host.Wasm/Elsa.Studio.Host.Wasm.csproj .
+# RUN dotnet restore "Elsa.Studio.Host.Wasm.csproj"
+
+WORKDIR /src/elsa-studio
+COPY ./elsa-studio .
+WORKDIR /src/elsa-studio/src/hosts/Elsa.Studio.Host.Wasm
+RUN dotnet build "Elsa.Studio.Host.Wasm.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Elsa.Studio.WebAssemblyApp.csproj" -c Release -o /app/publish
+RUN dotnet publish "Elsa.Studio.Host.Wasm.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Elsa.Studio.WebAssemblyApp.dll"]
+ENTRYPOINT ["dotnet", "Elsa.Studio.Host.Wasm.dll"]
